# ChangeLog for media-libs/gst-plugins-base
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-base/ChangeLog,v 1.129 2010/06/27 13:24:55 nixnut Exp $

  27 Jun 2010; <nixnut@gentoo.org> gst-plugins-base-0.10.28.ebuild:
  ppc stable #324691

  24 Jun 2010; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-base-0.10.25.ebuild:
  Stable for HPPA (bug #308379).

  24 Jun 2010; Markos Chandras <hwoarang@gentoo.org>
  gst-plugins-base-0.10.28.ebuild:
  Stable on amd64 wrt bug #324691

  18 Apr 2010; <nixnut@gentoo.org> gst-plugins-base-0.10.25.ebuild:
  ppc stable #308379

  05 Apr 2010; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-base-0.10.25.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #308379

  24 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-base-0.10.25.ebuild:
  stable x86, bug 308379

  22 Mar 2010; Mart Raudsepp <leio@gentoo.org>
  -files/gst-plugins-base-0.10.22-CVE-2009-0586.patch:
  Remove stale patch

  19 Mar 2010; Pacho Ramos <pacho@gentoo.org>
  gst-plugins-base-0.10.25.ebuild:
  amd64 stable, bug 308379

  19 Mar 2010; Mart Raudsepp <leio@gentoo.org>
  -gst-plugins-base-0.10.22.ebuild, -gst-plugins-base-0.10.23.ebuild:
  Remove old

*gst-plugins-base-0.10.28 (19 Mar 2010)

  19 Mar 2010; Mart Raudsepp <leio@gentoo.org>
  +gst-plugins-base-0.10.28.ebuild:
  Version bump with the following most noteworthy upstream changes:
  Many improvements and refactoring to playbin2.
  ISO-639 language code utility functions in libgsttag (via iso-codes).
  DKS and QTtext subtitle format support in subparse.
  Bug fixes, performance improvements.

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-base-0.10.25.ebuild:
  Transfer Prefix keywords

  05 Jan 2010; nixnut <nixnut@gentoo.org> gst-plugins-base-0.10.24.ebuild:
  ppc stable #290343

  29 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-base-0.10.24.ebuild:
  ia64/sh/sparc stable wrt #290343
