@@ -1,8 +1,10 @@
 DIST gst-plugins-base-0.10.24.tar.bz2 2199169 RMD160 3d85ee63e0b0a27eb50b5654dc2bd96c60bcf94f SHA1 01abe0839303923671e79d8448ebfabda5bce799 SHA256 6f566e8ce0911e0fae99dc7435c3fc3a14d0253578a88e87a28c0e2584372761
 DIST gst-plugins-base-0.10.25.tar.bz2 2241145 RMD160 4d57f4c6e42a4bf006c1dff9d69c0bbc9bcde483 SHA1 6057e6552c936f3dbe9ba01269bc0bcf8469ae0a SHA256 0ab2f7e1d818e7af1be99c4eae02ba69d4a1b8f7e3527929a6426f1daa0d4607
 DIST gst-plugins-base-0.10.28.tar.bz2 2343870 RMD160 e013a996af99b6be42ece624f279f3f76fe5a30f SHA1 c32b966e4ec3c81d520f80a03794cb11942df835 SHA256 132b6fd7749fcbfa9ad88c854aada44b6870c4175bda21cdb01a52b59a98e14f
+DIST gst-plugins-base-0.10.29.tar.bz2 2351477 RMD160 7ade1abdd56201fb10c4e19f3507f91298b760e7 SHA1 22a96d2d4dfbd3c980e3337db6e6c1d06fb0841a SHA256 ac035cce4d68e2e0b980d3ddb6c74674667cbfde6cddc65e18ea16368d34732c
 EBUILD gst-plugins-base-0.10.24.ebuild 1098 RMD160 5fb42a7e2e966c33e1da92fd0d604bc13bd4166c SHA1 30205a65b4ac2fb292bae75089bb22fdb45e7247 SHA256 00052188d2cff31f1d5fc17667d398018abbcf730f0aead72093453663db29a5
 EBUILD gst-plugins-base-0.10.25.ebuild 1248 RMD160 cdf946d55729783d214025102753be99b2ab435e SHA1 a7f9b0be58e9688e4af1d06032e562a06860bf9c SHA256 f4c7abb024c29583c2521834f4945234964c6424cbbfed8edea5a88a36e8340e
 EBUILD gst-plugins-base-0.10.28.ebuild 1296 RMD160 8f6140bca15d476b24e68954a2c052e02fcdba41 SHA1 b71c61229f3108e024d67c942f2f3c07a03e66c1 SHA256 ee36c4b88f518531826de170004d659010562c7777bcd8aa70c0d0b849791ecb
-MISC ChangeLog 17790 RMD160 cfe0c15ac1d25776e54e684edf34eac2cfa3807f SHA1 7650d65be68d858c8f91b1e2f51c801c4bd36d15 SHA256 56bcea093e489a9773627ccfb391a138c7aec1421167021f810d7d853535413b
+EBUILD gst-plugins-base-0.10.29.ebuild 1296 RMD160 2b7b95d8acb6ae87e092c460c21bca1b46a2b2e1 SHA1 36d148e00fc3c80a7fdc0272d5de373d652953f8 SHA256 894af48413631b0a51492016f3b80eb60684e092a6d042769da36f84e7395eec
+MISC ChangeLog 18191 RMD160 0f4481f90214e03db42690cd8dda4b5e4ba8d4bc SHA1 7d649df5749bda3ad6721fb80b8c4e644fcb68d3 SHA256 73a92be69b851d447e7f3d397c157a79fad6bba994574b1a499963500902fa34
 MISC metadata.xml 183 RMD160 1ff3457acfc2fe0f859b9cc5879b3093b2979fe9 SHA1 829dff00498fcdadd7e4f172770790cf601450b2 SHA256 d204aaee1ef1b7f278926aeadf0958d8b6a81affb746a3924a565263a97022fc
