@@ -1,6 +1,17 @@
 # ChangeLog for media-libs/gst-plugins-base
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-base/ChangeLog,v 1.129 2010/06/27 13:24:55 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-base/ChangeLog,v 1.130 2010/06/28 08:42:41 leio Exp $
+
+*gst-plugins-base-0.10.29 (28 Jun 2010)
+
+  28 Jun 2010; Mart Raudsepp <leio@gentoo.org>
+  +gst-plugins-base-0.10.29.ebuild:
+  Version bump with the following most noteworthy upstream changes:
+  Basic XMP metadata support.
+  On2 VP62 and VP7 support in riff-media.
+  color-matrix/chroma-site field and 8/16-bit grayscale format support in
+    video helper library.
+  Various bug fixes and improvements.
 
   27 Jun 2010; <nixnut@gentoo.org> gst-plugins-base-0.10.28.ebuild:
   ppc stable #324691
